--- a/src/main/resources/static/Assets/Css/envio.css
+++ b/src/main/resources/static/Assets/Css/envio.css
@@ -1,6 +1,6 @@
 
 body{
-    background-image: url(/Assets/Img/fondo.jpeg);
+    background-image: url(../Img/fondo.jpeg);
     font-family: 'Roboto Flex', sans-serif;
 }
 
