--- a/src/main/resources/static/Assets/Css/cart.css
+++ b/src/main/resources/static/Assets/Css/cart.css
@@ -130,7 +130,7 @@
 
 
 body{
-    background-image: url('/Assets/Img/fondo.jpeg');
+    background-image: url('../Img/fondo.jpeg');
     margin: 0px;
     padding: 0px;
     font-family: 'Roboto Flex';
