--- a/src/main/resources/static/Assets/Styles/Login.css
+++ b/src/main/resources/static/Assets/Styles/Login.css
@@ -1,7 +1,7 @@
 
 
 body{
-    background-image: url(/Assets/Img/fondo.jpeg);
+    background-image: url(../Img/fondo.jpeg);
     font-family: 'Roboto Flex', sans-serif;
 }
 
