--- a/src/main/resources/static/Assets/Css/catalogo.css
+++ b/src/main/resources/static/Assets/Css/catalogo.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(/Assets/Img/fondo.jpeg);
+    background-image: url(../Img/fondo.jpeg);
     margin: 0px;
     padding: 0px;
 
