--- a/src/main/resources/static/Assets/Css/formulario.css
+++ b/src/main/resources/static/Assets/Css/formulario.css
@@ -185,7 +185,7 @@
 
 
 body{
-    background-image: url(/Assets/Img/fondo\ dif.jfif);
+    background-image: url(../Img/fondo.jpeg);
     font-family: 'Roboto Flex', sans-serif;
 }
 
