--- a/src/main/resources/static/Assets/Css/cart.css
+++ b/src/main/resources/static/Assets/Css/cart.css
@@ -1,154 +1,12 @@
-/* CARRITO */
-
-.container-products {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    max-width: 95%;
-    justify-content: space-around;
-    margin: 0 auto;
-    margin-top: 20px;
-    padding: 20px;
-    border-radius: 10px;
-}
-
-.container-products ion-icon {
-    font-size: 20px;
-    color: #190974;
-    margin-left: 0px;
-    margin-right: 0px;
-    cursor: pointer;
-}
-
-.product-header {
-    width: 90%;
-    display: flex;
-    justify-content: flex-start;
-    border-bottom: 4px solid black;
-    margin: 0 auto;
-    background-color: #FFA931;
-    border-radius: 10px;
-    color: #640002;
-    font-weight: bold;
-}
-
-.product-title {
-    width: 45%;
-    border-bottom: 1px solid black;
-    text-align: center;
-}
-
-
-.price {
-    width: 15%;
-    border-bottom: 1px solid black;
-    display: flex;
-    align-items: center;
-    
-}
-
-.quantity {
-    width: 20%;
-    border-bottom: 1px solid black;
-    display: flex;
-    align-items: center;
-}
-
-.total {
-    width: 20%;
-    border-bottom: 1px solid black;
-    display: flex;
-    align-items: center;
-}
-
-.product {
-    width: 45%;
-    display: flex;
-    justify-content: left;
-    align-items: center;
-    padding: 10px;
-    border-bottom: 1px solid black;
-}
-
-.product ion-icon {
-    cursor: pointer;    
-}
-
-.products {
-    width: 90%;
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.products img {
-    width: 100px;
-    margin: 15px;
-}
-
-.basketTotalContainer {
-    display: flex;
-    justify-content: flex-end;
-    padding: 10px;
-}
-
-.basketTotalTitle {
-    width: 80%;
-    text-align: center;
-    background-color: #190974;
-    border-radius: 10px;
-    color: #FDF6DB;
-    font-weight: bold;
-    margin: 10px;
-}
-
-.basketTotal {
-    width: 20%;
-    text-align: right;
-    margin: 10px;
-}
-
-@media(max-width: 500px) {
-    nav h2 {
-        width: 100%;
-        text-align: center;
-        margin-bottom: 10px;;
-    }
-
-    .sm-hide {
-        display: none;;
-    }
-
-    .products,
-    .product-header {
-        justify-content: space-around;
-    }
-
-    .basketTotalContainer {
-        padding-right: 8%;
-    }
-}
-
-
 body{
     background-image: url('../Img/fondo.jpeg');
     margin: 0px;
     padding: 0px;
     font-family: 'Roboto Flex';
 }
-
-#itemName{
-    text-align: center;
-}
-
-
 /* HEADER */
-#contador{
-    color: #000;
-}
-
-
 #navTexto{
-    color: #640002;
+    color: #000000;
 }
 
 #colo {
@@ -222,3 +80,174 @@ footer{
 .card-text{
     justify-content: center;
 }
+
+/* Carrito */
+.container-icon{
+    position: relative;
+}
+
+#icon-cart{
+    width: 30px;
+    height: 30px;
+    stroke: #000;
+}
+
+#icon-cart:hover{
+    cursor: pointer;
+}
+
+.count-products{
+    position: absolute;
+    top: 60%;
+    right: 0px;
+
+    background-color: #000;
+    color: #fff;
+    width: 20px;
+    height: 20px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 30%;
+}
+
+#contador-productos{
+    font-size: 12px;
+}
+
+.container-cart-products{
+    position: absolute;
+    top: 30px;
+    right: 0;
+
+    background-color: #fff;
+    width: 400px;
+    z-index: 1;
+    box-shadow: 3px 3px 3px 1px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+}
+
+.cart-product{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.20);
+}
+
+.info-cart-product{
+    display: flex;
+    justify-content: space-between;
+    flex: 0.8;
+}
+
+
+.icon-close{
+    width: 25px;
+    height: 25px;
+}
+
+.icon-close:hover{
+    stroke: red;
+    cursor: pointer;
+}
+
+.titulo-producto-carrito{
+    font-size: 20px;
+}
+
+.precio-producto-carrito{
+    font-weight: 400;
+    font-size: 20px;
+    margin-left: 10px;
+}
+
+.cantidad-producto-carrito{
+    font-weight: 400;
+    font-size: 20px;
+}
+
+.cart-total{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 0;
+    gap: 20px;
+}
+
+.cart-total h3{
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.total-pagar{
+    font-size: 20px;
+    font-weight: 900;
+}
+
+.hidden-cart{
+    display: none;
+}
+
+/*Cards*/
+.item{
+    border-radius: 10px 10px 0 0;
+}
+
+.item figure{
+    overflow: hidden;
+    border-radius: 10px 10px 0 0;
+}
+
+
+
+.card{
+    border-radius: 10px 10px 0 0;
+}
+
+.card-image-top{
+    border-radius: 10px 10px 0 0;
+}
+
+.item:hover{
+    box-shadow: 0 10px 20px rgba(0,0,0,0.20);
+}
+
+.item:hover img{
+    transform: scale(1.2);
+}
+
+.item img{
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+    transition: all .5s;
+}
+
+.cart-empty{
+    padding: 20px;
+    text-align: center;
+}
+
+.hidden{
+    display: none;
+}
+
+/* Grid */
+th, td{
+    text-align: center
+}
+
+#totalGrid{
+    text-align: right;
+}
+
+#imgCart{
+    width: 50px;
+}
+
+.imageTitle{
+    text-align: left;
+}
+
