--- a/src/main/resources/static/Assets/Css/contacto.css
+++ b/src/main/resources/static/Assets/Css/contacto.css
@@ -1,5 +1,3 @@
-
-
 #colo {
     background: #FDF6DB;
     }
@@ -249,7 +247,155 @@ footer{
 	display: block;
 }
 
-/*color de numero de carrito*/
-#contador{
-    color: #000;
+/* Carrito */
+.container-icon{
+    position: relative;
+}
+
+#icon-cart{
+    width: 30px;
+    height: 30px;
+    stroke: #000;
+}
+
+#icon-cart:hover{
+    cursor: pointer;
+}
+
+.count-products{
+    position: absolute;
+    top: 60%;
+    right: 0px;
+
+    background-color: #000;
+    color: #fff;
+    width: 20px;
+    height: 20px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 30%;
+}
+
+#contador-productos{
+    font-size: 12px;
+}
+
+.container-cart-products{
+    position: absolute;
+    top: 30px;
+    right: 0;
+
+    background-color: #fff;
+    width: 400px;
+    z-index: 1;
+    box-shadow: 3px 3px 3px 1px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+}
+
+.cart-product{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.20);
+}
+
+.info-cart-product{
+    display: flex;
+    justify-content: space-between;
+    flex: 0.8;
+}
+
+
+.icon-close{
+    width: 25px;
+    height: 25px;
+}
+
+.icon-close:hover{
+    stroke: red;
+    cursor: pointer;
+}
+
+.titulo-producto-carrito{
+    font-size: 20px;
+}
+
+.precio-producto-carrito{
+    font-weight: 400;
+    font-size: 20px;
+    margin-left: 10px;
+}
+
+.cantidad-producto-carrito{
+    font-weight: 400;
+    font-size: 20px;
+}
+
+.cart-total{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 0;
+    gap: 20px;
+}
+
+.cart-total h3{
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.total-pagar{
+    font-size: 20px;
+    font-weight: 900;
+}
+
+.hidden-cart{
+    display: none;
+}
+
+/*Cards*/
+.item{
+    border-radius: 10px 10px 0 0;
+}
+
+.item figure{
+    overflow: hidden;
+    border-radius: 10px 10px 0 0;
+}
+
+
+
+.card{
+    border-radius: 10px 10px 0 0;
+}
+
+.card-image-top{
+    border-radius: 10px 10px 0 0;
+}
+
+.item:hover{
+    box-shadow: 0 10px 20px rgba(0,0,0,0.20);
+}
+
+.item:hover img{
+    transform: scale(1.2);
+}
+
+.item img{
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+    transition: all .5s;
+}
+
+.cart-empty{
+    padding: 20px;
+    text-align: center;
+}
+
+.hidden{
+    display: none;
 }
